Agregar librería Supabase para autenticación

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     
     <!-- 1. ENLACE A TU ARCHIVO CSS (LÍNEA AÑADIDA/CORREGIDA) -->
     <link rel="stylesheet" href="style.css">
+        
+    <!-- Supabase Client Library -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <!-- Debug Console - OCULTO POR DEFECTO -->
@@ -1193,4 +1196,5 @@ jmpenalvo@gmail.com</textarea>
     <!-- 3. ENLACE A TU ARCHIVO JAVASCRIPT (LÍNEA AÑADIDA) -->
     <script src="script.js"></script>
 </body>
+
 </html>
