Agregar botón temporal de registro de usuario

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                         <span id="loginButtonText">Iniciar Sesión</span>
                         <span id="loginSpinner" class="loading d-none"></span>
                     </button>
+                                    
+                <!-- Botón temporal de registro -->
+                <button type="button" class="btn-custom btn-outline-custom mt-2 w-100" onclick="registerFirstUser()" style="background: #ff9800; color: white; border: none;">
+                    Crear Usuario Admin (TEMPORAL)
+                </button>
                 </div>
             </form>
         </div>
@@ -1198,3 +1203,4 @@ jmpenalvo@gmail.com</textarea>
 </body>
 
 </html>
+
