Add ID to create admin button for security control

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </button>
                                     
                 <!-- Botón temporal de registro -->
-                <button type="button" class="btn-custom btn-outline-custom mt-2 w-100" onclick="registerFirstUser()" style="background: #ff9800; color: white; border: none;">
+                <button type="button" class="btn-custom btn-outline-custom mt-2 w- id="createAdminButton"100" onclick="registerFirstUser()" style="background: #ff9800; color: white; border: none;">
                     Crear Usuario Admin (TEMPORAL)
                 </button>
                 </div>
@@ -1203,4 +1203,5 @@ jmpenalvo@gmail.com</textarea>
 </body>
 
 </html>
+
 
