Agregar tabla de seguridad y acceso al HTML

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             </div>
         </aside>
 
+
+        \n                <!-- Tabla de Seguridad y Acceso -->\n                <table id="securityTable" class="table table-striped">\n                    <thead class="table-dark">\n                        <tr>\n                            <th>ID</th>\n                            <th>Nombre</th>\n                            <th>Email</th>\n                            <th>Rol</th>\n                            <th>Estado</th>\n                            <th>Acciones</th>\n                        </tr>\n                    </thead>\n                    <tbody>\n                        <!-- Usuarios se cargarán aquí desde JavaScript -->\n                    </tbody>\n                </table>\n                <button id="addUserSecurityBtn" class="btn btn-primary mt-3">Agregar Usuario</button>
         <!-- Main Content -->
         <main class="main-content">
             <!-- Top Bar con Logo -->
@@ -1203,5 +1205,6 @@ jmpenalvo@gmail.com</textarea>
 </body>
 
 </html>
+
 
 
