Fix: Corregir botón admin y agregar defer a script.js

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </button>
                                     
                 <!-- Botón temporal de registro -->
-                <button type="button" class="btn-custom btn-outline-custom mt-2 w- id="createAdminButton"100" onclick="registerFirstUser()" style="background: #ff9800; color: white; border: none;">
+                <button type="button" class="btn-custom btn-outline-custom mt-2 w-100 id="createAdminButton"100" onclick="registerFirstUser()" style="background: #ff9800; color: white; border: none;">
                     Crear Usuario Admin (TEMPORAL)
                 </button>
                 </div>
@@ -1201,10 +1201,11 @@ jmpenalvo@gmail.com</textarea>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- 3. ENLACE A TU ARCHIVO JAVASCRIPT (LÍNEA AÑADIDA) -->
-    <script src="script.js"></script>
+    <script src="script.js defer"></script>
 </body>
 
 </html>
+
 
 
 
