Corregir ruta del logo: cambiar images/logo.png a logo.png

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="top-bar">
                 <div class="logo-link">
                     <!-- RUTA CORREGIDA DEL LOGO -->
-                    <img src="images/logo.png" alt="Logo Gescon360" class="logo-img">
+                    <img src="logo.png" alt="Logo Gescon360" class="logo-img">
                     <span class="logo-text">GESCON 360</span>
                 </div>
                 <h1 class="page-title" id="pageTitle">Dashboard</h1>
@@ -1222,3 +1222,4 @@ jmpenalvo@gmail.com</textarea>
     <script src="script.js" defer></script>
 </body>
 </html>
+
