--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,11 @@ jmpenalvo@gmail.com"></textarea>
         </main>
     </div>
 
-    <!-- Scripts -->
-    <script src="script.js"></script>
+   <!-- Añade esto antes de <script src="script.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1FQZ6bQZ6Y9l+0h5Y1j0E6w5qY1lFv2xVf5g5Z7y1zN" crossorigin="anonymous"></script>
+
+<!-- Tu script principal -->
+<script src="script.js"></script>
 </body>
 </html>
+
