fix: Agregar input file faltante en sección Importar Expedientes
Problema: El área de "Arrastra y suelta" no abría el diálogo de selección de archivos.

Causa: Faltaba el elemento <input type="file"> en el HTML.

Solución:
- Agregado <input type="file" id="importFile" accept=".csv,.xls,.xlsx" style="display: none;">
- Colocado dentro del fileUploadContainer (línea 374)
- Acepta archivos CSV y Excel
- Oculto (se activará mediante JavaScript al hacer clic en el contenedor)

Resuelve: El botón de importar ahora podrá abrir el diálogo de selección de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -371,6 +371,7 @@
                             <i class="bi bi-cloud-upload"></i>
                         </div>
                         <div class="file-upload-text">
+                                                <input type="file" id="importFile" accept=".csv,.xls,.xlsx" style="display: none;">
                             Arrastra y suelta el archivo aquí o haz clic para seleccionarlo
                         </div>
                         <div class="file-upload-hint">
