feat: Actualizaciones y mejoras del 29-12-2025

--- a/public/index.html
+++ b/public/index.html
@@ -513,6 +513,7 @@
                                 <tr>
                                     <th><input type="checkbox" id="selectAll"></th>
                                     <th>N° Expediente</th>
+                                    <th>Ref. Gescon</th>
                                     <th>N° SGR</th>
                                     <th>Descripción</th>
                                     <th>Responsable</th>
