--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdn.sheetjs.com;
         style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com;
         font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com https://r2cdn.perplexity.ai;
-        connect-src 'self' https://*.supabase.co https://cdn.jsdelivr.net;
+        connect-src 'self' https://*.supabase.co wss://*.supabase.co https://cdn.jsdelivr.net;
         img-src 'self' data:;
     ">
     <meta charset="UTF-8">
