// Endpoint para REBALANCEO DE CARGA ACTIVA

--- a/public/index.html
+++ b/public/index.html
@@ -661,6 +661,9 @@
                         <button class="btn-custom btn-outline-custom" onclick="distributeWorkload()">
                             <i class="bi bi-arrow-repeat"></i> Distribuir Carga Equitativamente
                         </button>
+                        <button class="btn-custom btn-outline-custom" onclick="rebalanceActiveWorkload()">
+                            <i class="bi bi-scales"></i> Rebalancear Carga Activa
+                        </button>
                         <button class="btn-custom btn-outline-warning" onclick="openReassignTasksModal()">
                             <i class="bi bi-arrow-left-right"></i> Reasignar Tareas
                         </button>
