--- a/public/index.html
+++ b/public/index.html
@@ -1210,7 +1210,7 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <label for="advStatus" class="form-label">Estado</label>
-                            <select class="form-select" id="advStatus">
+                            <select class="form-select" id="advStatus" multiple size="4">
                                 <option value="">Todos</option>
                                 <option value="Pendiente">Pendiente</option>
                                 <option value="En Proceso">En Proceso</option>
