--- a/public/index.html
+++ b/public/index.html
@@ -1432,6 +1432,8 @@
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+<!-- Configuración -->
+<script src="config.js"></script>
 <!-- Tu script principal -->
 <script src="script.js"></script>
 </body>
