<!-- Configuración --> & function showNotification(message, type = 'info') {     // Mapear 'error' a 'danger' para coincidir

--- a/public/index.html
+++ b/public/index.html
@@ -1434,6 +1434,8 @@
 
 <!-- Configuración -->
 <script src="config.js"></script>
+<!-- Gestor CRUD -->
+<script src="crud-manager.js"></script>
 <!-- Tu script principal -->
 <script src="script.js"></script>
 </body>
