--- a/public/index.html
+++ b/public/index.html
@@ -823,6 +823,18 @@
 
             <!-- Reports Section -->
             <section id="reports" class="content-section">
+                <div class="dashboard-card mb-3">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            <h5 class="card-title mb-0"><i class="bi bi-bar-chart-line"></i> Generación de Gráficos</h5>
+                            <small class="text-muted">Los gráficos se generan bajo demanda para optimizar el rendimiento del sistema.</small>
+                        </div>
+                        <button class="btn-custom btn-primary-custom" onclick="loadReports()">
+                            <i class="bi bi-play-fill"></i> Cargar Gráficos
+                        </button>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-md-6">
                         <div class="dashboard-card">
