--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GESCON 360 - Sistema Integral de Gestión de Expedientes</title>
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="logo.png" type="image/png">
 
     <!-- Enlaces a recursos externos (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +47,7 @@
     <div id="authContainer" class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <i class="bi bi-diagram-3"></i>
+                <img src="logo.png" alt="Logo Gescon360" class="auth-logo">
                 <h2>GESCON 360</h2>
                 <p class="text-muted">Sistema de Gestión de Expedientes</p>
             </div>
@@ -110,7 +110,8 @@
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <h3><i class="bi bi-diagram-3"></i> GESCON 360</h3>
+                <img src="logo.png" alt="Logo Gescon360" class="sidebar-logo">
+                <h3>GESCON 360</h3>
             </div>
             <ul class="sidebar-menu">
                 <li><a href="#" class="active" onclick="showSection('dashboard')"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
