// Responsible persons data

--- a/public/index.html
+++ b/public/index.html
@@ -585,7 +585,22 @@
                     </div>
 
                     <div id="responsiblesList">
-                        <!-- Responsible persons will be loaded here -->
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Nombre</th>
+                                        <th>Email</th>
+                                        <th>Estado</th>
+                                        <th>Tareas Activas</th>
+                                        <th>Completadas</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="responsiblesTableBody">
+                                    <!-- Responsible persons will be loaded here -->
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </section>
