<!-- Sidebar --> & /* Logo en el sidebar */

--- a/public/index.html
+++ b/public/index.html
@@ -108,28 +108,28 @@
 
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
-            <div class="sidebar-header">
-                <img src="logo.png" alt="Logo Gescon360" class="sidebar-logo">
+            <div class="sidebar-logo">
+                <img src="logo.png" alt="Logo Gescon360" class="sidebar-logo-img">
             </div>
             <ul class="sidebar-menu">
-                <li><a href="#" class="active" onclick="showSection('dashboard')"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-                <li><a href="#" onclick="showSection('import')"><i class="bi bi-upload"></i> Importar Expedientes</a></li>
-                <li><a href="#" onclick="showSection('tasks')"><i class="bi bi-list-task"></i> Gestión de Tareas</a></li>
-                <li><a href="#" onclick="showSection('duplicates')"><i class="bi bi-exclamation-triangle"></i> Duplicados</a></li>
-                <li><a href="#" onclick="showSection('reports')"><i class="bi bi-graph-up"></i> Reportes</a></li>
-                <li><a href="#" onclick="showSection('archive')"><i class="bi bi-archive"></i> Archivados</a></li>
-                <li><a href="#" onclick="showSection('config')"><i class="bi bi-gear"></i> Configuración</a></li>
+                <li class="menu-item"><a href="#" class="active" onclick="showSection('dashboard')"><i class="bi bi-speedometer2"></i> <span class="menu-text">Dashboard</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('import')"><i class="bi bi-upload"></i> <span class="menu-text">Importar Expedientes</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('tasks')"><i class="bi bi-list-task"></i> <span class="menu-text">Gestión de Tareas</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('duplicates')"><i class="bi bi-exclamation-triangle"></i> <span class="menu-text">Duplicados</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('reports')"><i class="bi bi-graph-up"></i> <span class="menu-text">Reportes</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('archive')"><i class="bi bi-archive"></i> <span class="menu-text">Archivados</span></a></li>
+                <li class="menu-item"><a href="#" onclick="showSection('config')"><i class="bi bi-gear"></i> <span class="menu-text">Configuración</span></a></li>
             </ul>
 
             <div class="admin-section">
                 <div class="sidebar-header">
-                    <h4><i class="bi bi-shield-lock"></i> Administración</h4>
+                    <h4><i class="bi bi-shield-lock"></i> <span class="menu-text">Administración</span></h4>
                 </div>
                 <ul class="sidebar-menu">
-                    <li><a href="#" onclick="showSection('admin')"><i class="bi bi-people"></i> Gestión de Responsables<span class="admin-badge">ADMIN</span></a></li>
-                    <li><a href="#" onclick="showSection('workload')"><i class="bi bi-bar-chart"></i> Distribución de Carga<span class="admin-badge">ADMIN</span></a></li>
-                    <li><a href="#" onclick="showSection('limits')"><i class="bi bi-sliders"></i> Límites del Sistema<span class="admin-badge">ADMIN</span></a></li>
-                    <li><a href="#" onclick="showSection('users')"><i class="bi bi-person-gear"></i> Gestión de Usuarios<span class="admin-badge">ADMIN</span></a></li>
+                    <li class="menu-item"><a href="#" onclick="showSection('admin')"><i class="bi bi-people"></i> <span class="menu-text">Gestión de Responsables<span class="admin-badge">ADMIN</span></span></a></li>
+                    <li class="menu-item"><a href="#" onclick="showSection('workload')"><i class="bi bi-bar-chart"></i> <span class="menu-text">Distribución de Carga<span class="admin-badge">ADMIN</span></span></a></li>
+                    <li class="menu-item"><a href="#" onclick="showSection('limits')"><i class="bi bi-sliders"></i> <span class="menu-text">Límites del Sistema<span class="admin-badge">ADMIN</span></span></a></li>
+                    <li class="menu-item"><a href="#" onclick="showSection('users')"><i class="bi bi-person-gear"></i> <span class="menu-text">Gestión de Usuarios<span class="admin-badge">ADMIN</span></span></a></li>
                 </ul>
             </div>
         </aside>
